--- a/test_1002/test.html
+++ b/test_1002/test.html
@@ -6,27 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>WEB</h1>
+    <h1>포크 연습용 파일</h1>
     <ol>
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
     </ol>
 
-    <h1>WEB</h1>
-    <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-    </ol>
-    
-    html
-
-    <p>
-        HTML -> Hypertext Markup Language
-        CSS -> Cascading Style Sheets
-        JavaScript
-    </p>
-
+    <p>오늘 점심 뭐 먹죠?</p>
+ 
 </body>
 </html>
