--- a/test_1002_연습장/web/2.html
+++ b/test_1002_연습장/web/2.html
@@ -5,54 +5,7 @@
     <title>WEB1 - CSS </title>
     <meta charset="utf-8">
 
-    <style>
-        body {
-            margin: 0px;
-            /* padding: 20px; */
-        }
-
-        h1 {
-            font-size: 45px;
-            text-align: center;
-            border-bottom: 1px solid gray;
-            margin: 0px;
-        }
-
-        ol {
-            border-right: 1px solid gray;
-            /* width: 150px; */
-            margin: 00px;
-            padding: 20px;
-        }
-
-        #grid {
-            border-bottom: 1px solid gray;
-            display: grid;
-            grid-template-columns: 150px 1fr;
-
-        }
-
-        #article {
-            /* border-left: 1px solid gray; */
-            padding: 10px;
-
-        }
-        
-        @media(min-width :800px) {
-            #grid {
-                display: block;
-            }
-
-            #grid ol {
-                border-right: none;
-            }
-
-            h1 {
-                border-bottom: none;
-            }
-        }
-        
-    </style>
+    <link rel="stylesheet" href="style.css" />
 
 </head>
 
