--- a/test_1002_연습장/web/3.html
+++ b/test_1002_연습장/web/3.html
@@ -4,63 +4,7 @@
 <head>
     <title>WEB1 - JavaScript </title>
     <meta charset="utf-8">
-    <style>
-        body {
-            margin: 0px;
-            /* padding: 20px; */
-        }
-
-        h1 {
-            font-size: 45px;
-            text-align: center;
-            border-bottom: 1px solid gray;
-            margin: 0px;
-        }
-
-        ol {
-            border-right: 1px solid gray;
-            margin: 0px;
-            padding: 20px;
-        }
-
-        #grid {
-            /* border: 5px solid pink; */
-            display: grid;
-            grid-template-columns: 150px 1fr;
-            border-bottom: 1px solid gray;
-        }
-
-        #article {
-            /* border-left: 1px dotted gray; */
-            padding: 10px;
-        }
-        a:hover{
-            color: red;
-        }
-        @media(max-width :800px) {
-            #grid {
-                display: block;
-                border-bottom: none;
-            }
-
-            #grid ol {
-                border-right: none;
-                text-align: center;
-            }
-
-            h1 {
-                border-bottom: none;
-            }
-            h2 {
-                border-bottom: none;
-                color: red;
-            }
-            p{
-                font-size: 12px;
-            }
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
