--- a/test_1002_연습장/web/1.html
+++ b/test_1002_연습장/web/1.html
@@ -4,39 +4,7 @@
 <head>
     <title>WEB1 - HTML </title>
     <meta charset="utf-8">
-    <style>
-        body {
-            margin: 0px;
-            /* padding: 20px; */
-        }
-
-        h1 {
-            font-size: 45px;
-            text-align: center;
-            border-bottom: 1px solid gray;
-            margin: 0px;
-        }
-
-        ol {
-            /* border-right: 1px solid gray; */
-            /* width: 150px; */
-            margin: 10px;
-            padding: 20px;
-        }
-
-        #grid {
-            border-bottom: 1px solid gray;
-            display: grid;
-            grid-template-columns: 150px 1fr;
-
-        }
-
-        #article {
-            border-left: 1px solid gray;
-            padding: 10px;
-
-        }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
