로그인,회원가입 추가

--- a/test_1002_연습장/web/4_login.html
+++ b/test_1002_연습장/web/4_login.html
@@ -11,7 +11,7 @@
         <div class="form-container">
             <div id="signup-form">
                 <h2>Sign Up</h2>
-                  <!-- 프로필 이미지 미리보기 영역 -->
+                  <!-- 프로필 이미지 미리보기 영역 -->/
                   <div class="profile-img-container">
                     <!-- 기본 이미지 지정 (여기서 default-avatar.png는 기본 이미지 파일 경로) -->
                     <img id="profile-preview" src="user_profile.png" alt="Profile Image">
