--- a/test_1002_연습장/web/3.html
+++ b/test_1002_연습장/web/3.html
@@ -5,10 +5,18 @@
     <title>WEB1 - JavaScript </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
+    <script src="colors.js"></script>
 </head>
 
 <body>
     <h1><a href="index.html">이상현</a></h1>
+
+    <input id="night_day" type="button" value="night" onclick="
+    nightDayHandler(this)">
+
+
+
+
     <div id="grid">
 
         <ol>
@@ -28,6 +36,17 @@
             <img src="coding.jpg" width="200px">
         </div>
     </div>
+    <script>
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while (i < alist.length) {
+            alist[i].style.color = "powderblue";
+            console.log(alist[i]);
+            i = i + 1;
+        }
+    </script>
+
+    
 
 
 </body>
