--- a/test_1002_연습장/web/1.html
+++ b/test_1002_연습장/web/1.html
@@ -5,10 +5,13 @@
     <title>WEB1 - HTML </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
+    <script src="colors.js"></script>
 </head>
 
 <body>
     <h1><a href="index.html">이상현</a></h1>
+    <input id="night_day" type="button" value="night" onclick="
+    nightDayHandler(this)">
     <div id="grid">
         <ol>
             <li><a href="1.html" class="saw" id="active">HTML</a></li>
