--- a/test_1002_연습장/web/index.html
+++ b/test_1002_연습장/web/index.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
- <html>
- <head>
- <title>WEB1 - WEB </title>
- <meta charset="utf-8">
- <style>
-   a{
-      font-size: 30px;
-      color:rgb(0, 68, 255);
-      text-decoration: none;
-   }
-   h1{
-      font-size: 45px;
-   }
- </style>
- </head>
- <body>
-    <h1>이상현 홈페이지</h1>
- <h1><a href="index.html" style="color: red;">WEB</a></h1>
- <ol>
- <li><a href="1.html">HTML</a></li>
- <li><a href="2.html" style="text-decoration: underline;">CSS</a></li>
- <li><a href="3.html">JavaScript</a></li>
- </ol>
- <h2>WEB이란 무엇인가?</h2>
- <p style="margin-top: 40px;">
- The World Wide Web (WWW), commonly known as the Web, is the world's dominant software platform.[1] It was 
-originally a hypertext document management system[2] accessed over the Internet.[3]
- The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed by users by 
-a software application called a web browser, and are published by a software application called a web server.
- Web resources may be any type of downloaded media, but web pages are hypertext documents formatted in 
-Hypertext Markup Language (HTML). Special HTML syntax displays embedded hyperlinks with URLs, which permits users 
-to navigate to other web resources. In addition to text, web pages may contain references to images, video, audio, and 
-software components, which are either displayed or internally executed in the user's web browser to render pages or 
-streams of multimedia conten
- </p>
- </body>
- </html>
+<html>
+
+<head>
+   <title>WEB1 - WEB </title>
+   <meta charset="utf-8">
+   <link rel="stylesheet" href="style.css" />
+    <script src="colors.js"></script>
+</head>
+
+<body>
+   <h1>이상현 홈페이지</h1>
+   <input id="night_day" type="button" value="night" onclick="
+    nightDayHandler(this)">
+   <h1><a href="index.html" style="color: red;">WEB</a></h1>
+   <ol>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html" style="text-decoration: underline;">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+   </ol>
+   <h2>WEB이란 무엇인가?</h2>
+   <p style="margin-top: 40px;">
+      The World Wide Web (WWW), commonly known as the Web, is the world's dominant software platform.[1] It was
+      originally a hypertext document management system[2] accessed over the Internet.[3]
+      The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed by users by
+      a software application called a web browser, and are published by a software application called a web server.
+      Web resources may be any type of downloaded media, but web pages are hypertext documents formatted in
+      Hypertext Markup Language (HTML). Special HTML syntax displays embedded hyperlinks with URLs, which permits users
+      to navigate to other web resources. In addition to text, web pages may contain references to images, video, audio,
+      and
+      software components, which are either displayed or internally executed in the user's web browser to render pages
+      or
+      streams of multimedia conten
+   </p>
+</body>
+
+</html>
