프로젝트 수정1

--- a/test_1002_연습장/web/Project/main.html
+++ b/test_1002_연습장/web/Project/main.html
@@ -34,15 +34,15 @@
                 <tbody id="boardBody">
                     <tr>
                         <td>1</td>
+                        <td>테스트1</td>
                         <td>김우직</td>
-                        <td>남</td>
-                        <td>남</td>
+                        <td>2024-09-13</td>
                     </tr>
                     <tr>
                         <td>2</td>
+                        <td>테스트2</td>
                         <td>박수진</td>
-                        <td>여</td>
-                        <td>남</td>
+                        <td>2024-10-15</td>
                     </tr>
                 </tbody>
             </table>
