--- a/test_1002_연습장/web/Project/join.html
+++ b/test_1002_연습장/web/Project/join.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="joinStyles.css" />
 
     <header>
         <h1><a href=main.html><img src="image/home.png" width="30px"> 이상현 게시판</a></h1>
@@ -16,7 +16,41 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <h1>회원가입</h1>
+        <form id="signupForm">
+            <div class="form-group">
+                <label for="username">아이디</label>
+                <input type="text" id="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">비밀번호</label>
+                <input type="password" id="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">비밀번호 확인</label>
+                <input type="password" id="confirmPassword" required>
+            </div>
+            <div class="form-group">
+                <label for="name">이름</label>
+                <input type="text" id="name" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">전화번호</label>
+                <input type="tel" id="phone" required>
+            </div>
+            <div class="form-group">
+                <label for="email">이메일</label>
+                <input type="email" id="email" required>
+            </div>
+            <div class="button-group">
+                <button type="submit">가입하기</button>
+                <button type="button" id="cancelButton">가입 취소</button>
+            </div>
+        </form>
+    </div>
+    
+    <script src="js.js"></script>
 </body>
 
 </html>
