프로젝트 수정3

--- a/test_1002_연습장/web/Project/login.html
+++ b/test_1002_연습장/web/Project/login.html
@@ -8,7 +8,9 @@
 
     <header>
         <h1><a href=main.html><img src="image/home.png" width="30px"> 이상현 게시판</a></h1>
-        <span><a href="join.html">회원가입</a></span>
+        <nav>
+            <span><a href="join.html">회원가입</a></span>
+        </nav>
     </header>
 </head>
 <body>
