--- a/test_1002_연습장/web/Project/join.html
+++ b/test_1002_연습장/web/Project/join.html
@@ -21,27 +21,28 @@
         <form id="signupForm">
             <div class="form-group">
                 <label for="username">아이디</label>
-                <input type="text" id="username" required>
+                <input type="text" id="username" placeholder="아이디를 입력하세요." required>
             </div>
             <div class="form-group">
                 <label for="password">비밀번호</label>
-                <input type="password" id="password" required>
+                <input type="password" id="password" placeholder="비밀번호를 입력하세요." required>
             </div>
             <div class="form-group">
                 <label for="confirmPassword">비밀번호 확인</label>
-                <input type="password" id="confirmPassword" required>
+                <input type="password" id="confirmPassword" placeholder="비밀번호를 다시 입력하세요." required>
             </div>
+            <div id="message"></div>
             <div class="form-group">
                 <label for="name">이름</label>
                 <input type="text" id="name" required>
             </div>
             <div class="form-group">
                 <label for="phone">전화번호</label>
-                <input type="tel" id="phone" required>
+                <input type="tel" id="phone" placeholder="'-'를 제외하고 입력하세요." required>
             </div>
             <div class="form-group">
                 <label for="email">이메일</label>
-                <input type="email" id="email" required>
+                <input type="email" id="email" placeholder="예: example@naver.com" required>
             </div>
             <div class="button-group">
                 <button type="submit">가입하기</button>
@@ -49,7 +50,7 @@
             </div>
         </form>
     </div>
-    
+
     <script src="js.js"></script>
 </body>
 
