프로젝트 수정4

--- a/test_1002_연습장/web/Project/join_이상현950708.html
+++ b/test_1002_연습장/web/Project/join_이상현950708.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="joinStyles.css" />
+    <link rel="stylesheet" href="css/joinStyles_이상현950708.css" />
 
     <header>
-        <h1><a href=main.html><img src="image/home.png" width="30px"> 이상현 게시판</a></h1>
+        <h1><a href=main_이상현950708.html><img src="image/home.png" width="30px"> 이상현 게시판</a></h1>
         <nav>
-            <span><a href="login.html">로그인</a></span>
+            <span><a href="login_이상현950708.html">로그인</a></span>
         </nav>
     </header>
 </head>
@@ -50,8 +50,23 @@
             </div>
         </form>
     </div>
-
-    <script src="js.js"></script>
+    <footer class="footer">
+        <div class="footer-section">
+            <img src="image/technical.png">
+        </div>
+        <div class="footer-section">
+            <h5>수강 정보</h5>
+            <p>수강생: 이상현</p>
+            <p>수강과정: (K디지털) AI&빅데이터 분석 활용 풀스택 서비스 개발</p>
+        </div>
+        <div class="footer-section">
+            <h5>연락처</h5>
+            <p>전화번호 : 010-4949-3769</p>
+            <p>이메일 : tkdgus3769@naver.com</p>
+        </div>
+        
+    </footer>
+    <script src="js/js_이상현950708.js"></script>
 </body>
 
 </html>
